Fixed weird stretching of chart, furthermore, the solve main page is now centered

--- a/em_potential_solver/src/components/solver/solver.module.css
+++ b/em_potential_solver/src/components/solver/solver.module.css
@@ -32,6 +32,8 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  justify-content: center;
+  height: 100%;
   padding: 1rem;
   line-height: auto;
 }
